@@ -3,18 +3,20 @@ Hash: SHA256
 
 DIST APCu-4.0.1.tgz 105861 SHA256 d9d22fdb69a43118da2bd8c120bfc34da7dff89b9327beb52ded4d1aa73e266f SHA512 64d92ee59b3e404514420c48cbe73e2ae41d3b3cd97a68724b29dc00302dbee8ea465211f52fbc5e116c6a3afb3b4eb69b07eeaef5b038294debb5a541fa9415 WHIRLPOOL ce7725e7f5fd268a6f17b51a3610b50a7d96fc6a0bc72d9f1b80445ec586cac433cb42ee1f5ca4336b321bd69b0886bcf8b4f83a6a51d0355045552bea5a180b
 DIST APCu-4.0.6.tgz 119689 SHA256 4c757df0b90e855a1f9cf160d8d697f53f74e60f44bd93080cfb12f838d1027e SHA512 dc9be4bef7ede76f8fe94b49c106f64e3d6b1a52d2f5ca12e00b01b689fe60f6d74790768c45ec085957443c5d7b96249ab9d0a3de93282fe38e829e974bda29 WHIRLPOOL fb8c0a9e655ae274e3a11cd401d42516a0bdaed314f7aedc35a9f90ed921935c832aa6339f89d9259630fac7f93adde00bf5964097edb21301a6ad936215200f
+DIST APCu-4.0.7.tgz 118670 SHA256 178a731ee3435b451f1144bc4a63c9d70d4909a2c434e17c6e07db554df90bd6 SHA512 50db51358c9268cc5fdd0d48fb444be9e9356f1690bc1ae021a9618c8819ce8873bf4502fe87a10467ffda2ef38267ccca2af55152b064400c69a8da92b7e98b WHIRLPOOL 3c721753764d6f3adbf6090710aafdb29d78b3d55e718c0101d7cad993b51d7b335931c61f120f8dad4623fe16cad9f13952367934968599ed15dd9c744b9725
 EBUILD pecl-apcu-4.0.1-r1.ebuild 1328 SHA256 4c388b463ab57b9560e16bb9c2bf71c7ef79add0e01f6201b39f437c26d8837c SHA512 cfa11b1a1c63b723efce4f361ae575a94a65398311c30c35f7273a4754bff1c777164edaf84e7be6a8661194a7e531f53dcfd1d49edaff2b7c74c6b96a7f3137 WHIRLPOOL ee29c4df17ae68b066d49a0ffaa2d087649a614b5b754be8cc53f4e1fa43275553460011f3d952326ffed2b3022a848da6a412703716a7c0f35968cdf5bb1700
 EBUILD pecl-apcu-4.0.6.ebuild 1329 SHA256 dfb187e796257dfd73ec2c97409041334fe251ebadfa3759b7847b9b3e0acabb SHA512 06d3fd40a89a556ebf7c9c2978b29c907260e225885627dc6b5780dfbb8a644d52e0a7b97d379006ea4d893c0857b8ea037216c0f530df63b10aa384dc8a37ed WHIRLPOOL 16541da6cf1ffbc74dac61010a906eb2516d4eb84a6d3e7b9d0daed0de8d1f8d87d7c6a845e9a0b3ebce111379bbea6dbe515984acc4ac49b28190ce039d5545
-MISC ChangeLog 1638 SHA256 f3dcf32b4bcdc467c7fc1014dcc9c9b85a704d70d4954e78ed3bb3f183a76945 SHA512 a369f6a0cfc67593fd6caf2e95645d546369bffb16813e5f1c55e8ee6a6b43b4e6c79396a844b0ae8b545681b94a412d75bdbc988c686bae3eb66d0364817196 WHIRLPOOL 02bcbc7d2ff0e59a9f557a6f60475f1737769b27e467ac16db6561f7c664ed2b0a286595354c5cb636e25f6f0d287241653af83187aa26d13e92fc211165c55b
+EBUILD pecl-apcu-4.0.7.ebuild 1329 SHA256 bfd1684cae698ba7221b98fa803a974656315c3f09b28da2c164b59e985a01f5 SHA512 d5354789835891e53af7b4b0dfa78e15cadb421ef12bc680cb96f54f8598d2b76be900e5633f346c4e9fe96ec2baf89d0e4d57cebbbf944e274f4f84f1ba1527 WHIRLPOOL d762fb73386f1ba88cb0078f0b0a4bf688155d8c6f11a35d163c1d475e8d29b5d69096a1698efc49d11a1d3b3a444757a7e2bf3535fc84351e0c93c0de101f47
+MISC ChangeLog 1760 SHA256 4007dba3f494cdc8299f90c1dc86878a0b0eb0cde259a9b434fdf266a9477adf SHA512 bdb6987840bdd201a600cc098645fd2d9822c12fd8bb9848e832ca6843fdaaaabfad7868f96d91b1870638a85dae1b1b6c979e903733aa20070fb06e17bc1be9 WHIRLPOOL 3610167977e7d2901ea42f60565baa082ab089dd60a853ff687ed516e30f07ff1e8a1b28be2b1f93354eee45fb2a01c336700c4c52a603edbfd14ed4ed267820
 MISC metadata.xml 458 SHA256 9dbd7d8b0b8072cf8504510a566265a44932457a08d31eb2937840c70da9ff4e SHA512 65905ceeabae80e81e0cdb13220706c887e6569d307adb79a026c0626f6b27f98955e4e4b56f6ea9bd4d3095084279c4fb9fab21d43c46f66f5db67431e14f4a WHIRLPOOL 6c5ebf7dea5771b561e53898bb65282349974636a6f8ca6d14df0dcc444d1b4c93992f86aed331e35521417400fa878e19dca52c04db565170da4d93459ca122
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUN0BnAAoJEE4V4vFnx44dwowH/13W8x5WJDpIQCkMFjBUP3X2
-ykM+qy7Y/p9jE67o7kd1DHCGgwJQis1qhJcA7skw/cNI29bYg4pP1F2TqSRBuCkN
-ZicQgnA/HQv17JmUXwtakzpDIgC7uTmAaKpRe5GluFT978OXs1718SBTbYb62x5K
-skQCTSQsaxBQ1Cn+6XFh8dNj7Jh+j0/8rznlpGkPzU1rgiU+t+NByb8cuGh00ait
-5W8h95rJk4r2nVLrqNsTXohYMCATO43SU6XrrSx10dDYPegZSiKW/ctrcNSmfIEw
-KF2+f8tmJehDRZKo4fzMdGyq2dqaAMMyoTelaH+3TkPumHcznWooyu6o1lhqMP8=
-=sxLG
+iQEcBAEBCAAGBQJUPohUAAoJEE4V4vFnx44dGU8H/1ZSOgvySaQJLWfrFaUzT3qh
+23rtQC7MjdCXJDbXuyIGQXujPWjFZBoB5z3UjBAPCjS8mhMRXLeYuPJhLS1qDHMG
+E5BrVu9wSmtt9Uyyp9YD0bna1Ty8/zzHTQrBUpChenTxyl/j9ostrmo4QeS2aQyI
+qitF+ugBMgz9e6D5OrY6c9e/kqkuOuGjjl4tWtgli8h959BKQxh2vyfw10zVsDpP
+QvYFicV9ZzX6GO4PaB8Y3PEVvJh44MA3eVr42aoy+6Zw+Ps/kga+UXhOClrSD12d
+N1Bj2LGSXW/ii3ho79mCmwqesd+lNMiWXYCITf072SdGfuMOH7/UiDU6uOcSn3c=
+=M/Pz
 -----END PGP SIGNATURE-----
